@@ -1,3 +1,6 @@
+Version Four (marionline)
+	* Add --list-current-files to view in the standart-output files stored in my archive
+
 Version Four (0.4)
 
 	* Moved the source code to github
